# LearnComputerGraphics

./: CMakeLists.txt  README.md  build.bat
shaders/: basic.frag  basic.vert  color.frag  color.vert  dir_light.frag  lamp.frag  light_map.frag  light_map.vert  material.frag  model.frag  model.vert  phong.frag  phong.vert  point_light.frag  projection.frag  projection.vert  spot_light.frag  spot_light.vert
src/BASIC_light_map/: BASIC_light_map.c  camera.h  data.h  light_map.md
src/BASIC_material/: BASIC_material.c  material.md
src/BASIC_transformation/: BASIC_transformation.c  transformation.md
src/LIGHT_caster/: LIGHT_caster.c  data.h  light_caster.md
src/LIGHT_color/: LIGHT_color.c  color.md  data.h
src/LIGHT_phong/: LIGHT_phong.c  data.h  phong.md
src/MATH/: MATH.c  camera.c  camera.h  data.h  mat.c  mat.h  quat.h  shader.c  shader.h  utilm.c  utilm.h  vec.c  vec.h
src/MATH_fps_camera/: MATH_fps_camera.c  camera.c  fps_camera.md
src/MATH_projection/: MATH_projection.c  data.h  projection.md
src/MATH_transformation/: MATH_transformation.c  transformation.md
src/MODEL_load_obj/: MODEL_load_obj.c  dyarray.c  dyarray.h  mesh.c  mesh.h
src/OGL_camera/: OGL_camera.c
src/RENDER_line/: RENDER_line.c  draw_line.c  draw_line.h  render_line.md
src/TINYRENDERER/: tga_image.c  tga_image.h  tinyrenderer.md
